# housing-sim-jp

./: .gitignore  README.md  config.example-25.toml  config.example-30.toml  config.example-35.toml  config.example.toml  housing_simulation.py  pyproject.toml  report-30.md  report-35.md  report.md  scenario_comparison.py
.github/workflows/: test.yml
housing_sim_jp/: __init__.py  chart_cli.py  charts.py  cli.py  config.py  events.py  facility.py  monte_carlo.py  monte_carlo_cli.py  params.py  report.py  report_cli.py  scenario_cli.py  scenarios.py  simulation.py  strategies.py  tax.py
reports/: report-25.md  report-30.md  report-35.md
tests/: test_bucket.py  test_monte_carlo.py  test_params.py  test_scenarios.py  test_simulation.py  test_strategies.py  test_tax.py
